Very Important steps made in this push. Changed variables, method of implementing the glm models, replicated the code for a neural network in R, just need to make sure to ask about TensorFlow

--- a/final_project.qmd
+++ b/final_project.qmd
@@ -9,6 +9,16 @@ format:
     table-of-contents: true
 ---
 
+## Introduction
+
+This project could represent the minimal work conducted on underdeveloped countries and answer the question if there is sufficient data out there regarding underdeveloped countries, with the answer being a loud "NO". Being an intern with the Sub-Saharan Africa Poverty Team with the World Bank Group last summer, I realized that the lack of data regarding underdeveloped countries is something that needs to be addressed. This insufficient provision of data does not allow extensive research to be conducted and therefore lead to detailed solutions. 
+
+The purpose of this project is to "effectively" construct a classification model for underdeveloped countries, given a set of variables from [The World Bank Data Repository](https://data.worldbank.org/indicator). The initial selection of variables was indeed challenging, since most data sets would not contain enough data for underdeveloped countries, with `NA` values overwhelming the corresponding rows. Because of that, I decided to focus on the 21st century and ignore data before the year 2000. Two primary analytical approaches employed in this project are: logistic regression and neural networks.
+
+Logistic regression, a classical statistical method, is utilized to model the probability of a country being classified as underdeveloped based on its socio-economic indicators. By fitting a logistic regression model to the data, the project seeks to identify the key variables that significantly influence a country's development status. This approach provides interpretable results and insights into the relative importance of different indicators.
+
+In addition to logistic regression, the project also explores the application of neural networks, a more advanced machine learning technique. Neural networks offer the advantage of capturing complex, nonlinear relationships between predictors and the response variable. By designing and training neural network models, the project aims to uncover nuanced patterns and interactions within the data that may not be captured by traditional linear models like logistic regression.
+
 ## Load the Materials
 
 ```{r}
@@ -24,41 +34,40 @@ world_df <- map_data("world")
 ```{r}
 electricity_access <- read_csv("data/access_to_electricity/access_to_electricity.csv", 
                         skip = 4) |>
-  select(-c(3:34), -c(67:69))
+  select(-c(3:44), -c(67:69))
 ```
 
 ```{r}
 countries <- c("Afghanistan", "Angola", "Bangladesh", "Benin", "Burkina Faso", "Burundi", "Cambodia", "Central African Republic", "Chad", "Comoros", "Congo, Dem. Rep.", "Djibouti", "Eritrea", "Ethiopia", "Gambia, The", "Guinea", "Guinea-Bissau", "Haiti", "Kiribati", "Lao PDR", "Lesotho", "Liberia", "Madagascar", "Malawi", "Mali", "Mauritania", "Mozambique", "Myanmar", "Nepal", "Niger", "Rwanda", "Sao Tome and Principe", "Senegal", "Sierra Leone", "Solomon Islands", "Somalia", "South Sudan", "Sudan", "Tanzania", "Timor-Leste", "Togo", "Tuvalu", "Uganda", "Yemen, Rep.", "Zambia")
 ```
 
-## Experimenting for the Model
-
 ```{r}
 electricity_stats <- electricity_access |>
-  pivot_longer(c(3:34), 
+  pivot_longer(c(3:24), 
                names_to = "Year", 
                values_to = "Electricity Access") |>
   filter(!is.na(`Electricity Access`)) |>
   group_by(`Country Name`) |>
-  summarise(`mean_under_elec` = mean(`Electricity Access`, na.rm = TRUE),
-            `sd_under_elec` = sd(`Electricity Access`, na.rm = TRUE))
+  summarise(`mean_elec_access` = mean(`Electricity Access`, na.rm = TRUE),
+            `sd_elec_access` = sd(`Electricity Access`, na.rm = TRUE))
 ```
 
-## Experimenting for the Shiny App
-
 ```{r}
+#| output: false
 underdeveloped_electricity <- electricity_access |>
-  pivot_longer(c(3:34), 
+  pivot_longer(c(3:24), 
                names_to = "Year", 
                values_to = "Electricity Access") |>
   filter(!is.na(`Electricity Access`)) 
 ```
 
 ```{r}
+#| output: false
 underdeveloped_map <- left_join(underdeveloped_electricity, world_df, by = c("Country Name"="region"))
 ```
 
 ```{r}
+#| output: false
 plot_1 <- ggplot()+
   geom_polygon(data = world_df, mapping = aes(x = long, y = lat, group = group, label = region), fill = "grey")+
   geom_polygon(data = underdeveloped_map, mapping = aes(x = long, y = lat, group = group, fill = `Electricity Access`, label = `Country Name`))+
@@ -71,12 +80,12 @@ ggplotly(plot_1, tooltip = "label")
 ```{r}
 agricultural_land <- read_csv("data/agricultural_land/agricultural_land.csv", 
                        skip = 4) |>
-  select(-c(3:34), -c(67:69)) |>
+  select(-c(3:44), -c(67:69))
 ```
 
 ```{r}
 agriculture_land_stats <- agricultural_land |>
-  pivot_longer(c(3:34), 
+  pivot_longer(c(3:24), 
                names_to = "Year", 
                values_to = "Agricultural Land") |>
   filter(!is.na(`Agricultural Land`)) |>
@@ -86,65 +95,65 @@ agriculture_land_stats <- agricultural_land |>
 ```
 
 ```{r}
-freshwater_withdrawals <- read_csv("data/annual_freshwater_withdrawals/freshwater_withdrawals.csv", 
+population_growth <- read_csv("~/Desktop/Sixth Semester/ds334_final_project/ds334_final_project/data/population_growth_annual/population_growth.csv", 
                             skip = 4) |>
-  select(-c(3:34), -c(67:69))
+  select(-c(3:44), -c(67:69))
 ```
 
 ```{r}
-freshwater_withdrawals_stats <- freshwater_withdrawals |>
-  pivot_longer(c(3:34), 
+population_growth_stats <- population_growth |>
+  pivot_longer(c(3:24), 
                names_to = "Year", 
-               values_to = "Freshwater Withdrawals") |>
-  filter(!is.na(`Freshwater Withdrawals`)) |>
+               values_to = "Population Growth Rate") |>
+  filter(!is.na(`Population Growth Rate`)) |>
   group_by(`Country Name`) |>
-  summarise(`mean_water_withd` = mean(`Freshwater Withdrawals`, na.rm = TRUE),
-            `sd_water_withd` = sd(`Freshwater Withdrawals`, na.rm = TRUE))
+  summarise(`mean_pop_growth` = mean(`Population Growth Rate`, na.rm = TRUE),
+            `sd_pop_growth` = sd(`Population Growth Rate`, na.rm = TRUE))
 ```
 
 ```{r}
-atms <- read_csv("data/atms/atms.csv", 
+primary_school_enrol <- read_csv("~/Desktop/Sixth Semester/ds334_final_project/ds334_final_project/data/primary_school_enrollment/primary_school.csv", 
           skip = 4) |>
-  select(-c(3:34), -c(67:69))
+  select(-c(3:44), -c(67:69))
 ```
 
 ```{r}
-atms_stats <- atms |>
-  pivot_longer(c(3:34), 
+primary_school_enrol_stats <- primary_school_enrol |>
+  pivot_longer(c(3:24), 
                names_to = "Year", 
-               values_to = "ATMs") |>
-  filter(!is.na(`ATMs`)) |>
+               values_to = "Primary School Enrollment Rate") |>
+  filter(!is.na(`Primary School Enrollment Rate`)) |>
   group_by(`Country Name`) |>
-  summarise(`mean_atms` = mean(`ATMs`, na.rm = TRUE),
-            `sd_atms` = sd(`ATMs`,na.rm = TRUE))
+  summarise(`mean_prim_school` = mean(`Primary School Enrollment Rate`, na.rm = TRUE),
+            `sd_prim_school` = sd(`Primary School Enrollment Rate`,na.rm = TRUE))
 ```
 
 ```{r}
-precipitation <- read_csv("data/avg_precipitation/precipitation_depth.csv", 
+total_unemployment <- read_csv("~/Desktop/Sixth Semester/ds334_final_project/ds334_final_project/data/total_unemployment/total_unemployment.csv", 
           skip = 4) |>
-  select(-c(3:34), -c(67:69))
+  select(-c(3:44), -c(67:69))
 ```
 
 ```{r}
-precipitation_stats <- precipitation |>
-  pivot_longer(c(3:34), 
+total_unemployment_stats <- total_unemployment |>
+  pivot_longer(c(3:24), 
                names_to = "Year", 
-               values_to = "Precipitation") |>
-  filter(!is.na(`Precipitation`)) |>
+               values_to = "Total Unemployment") |>
+  filter(!is.na(`Total Unemployment`)) |>
   group_by(`Country Name`) |>
-  summarise(`mean_precip` = mean(`Precipitation`, na.rm = TRUE),
-            `sd_precip` = sd(`Precipitation`, na.rm = TRUE))
+  summarise(`mean_total_unempl` = mean(`Total Unemployment`, na.rm = TRUE),
+            `sd_total_unempl` = sd(`Total Unemployment`, na.rm = TRUE))
 ```
 
 ```{r}
 sanitation <- read_csv("data/basic_sanitation_services/basic_sanitation.csv", 
           skip = 4) |>
-  select(-c(3:34), -c(67:69))
+  select(-c(3:44), -c(67:69))
 ```
 
 ```{r}
 sanitation_stats <- sanitation |>
-  pivot_longer(c(3:34), 
+  pivot_longer(c(3:24), 
                names_to = "Year", 
                values_to = "Sanitation") |>
   filter(!is.na(`Sanitation`)) |>
@@ -154,48 +163,14 @@ sanitation_stats <- sanitation |>
 ```
 
 ```{r}
-broad_money <- read_csv("data/broad_money/broad_money.csv", 
-          skip = 4) |>
-  select(-c(3:34), -c(67:69))
-```
-
-```{r}
-broad_money_stats <- broad_money |>
-  pivot_longer(c(3:34), 
-               names_to = "Year", 
-               values_to = "Broad Money") |>
-  filter(!is.na(`Broad Money`)) |>
-  group_by(`Country Name`) |>
-  summarise(`mean_broad` = mean(`Broad Money`, na.rm = TRUE),
-            `sd_broad` = sd(`Broad Money`, na.rm = TRUE))
-```
-
-```{r}
-agriculture_employment <- read_csv("data/employment_in_agr/employment_in_agr.csv", 
-          skip = 4) |>
-  select(-c(3:34), -c(67:69))
-```
-
-```{r}
-agriculture_employment_stats <- agriculture_employment |>
-  pivot_longer(c(3:34), 
-               names_to = "Year", 
-               values_to = "Employment in Agriculture") |>
-  filter(!is.na(`Employment in Agriculture`)) |>
-  group_by(`Country Name`) |>
-  summarise(`mean_empl_agr` = mean(`Employment in Agriculture`, na.rm = TRUE),
-            `sd_empl_agr` = sd(`Employment in Agriculture`, na.rm = TRUE))
-```
-
-```{r}
 fertility_rate <- read_csv("data/fertility_rate/fertility_rate.csv", 
           skip = 4) |>
-  select(-c(3:34), -c(67:69))
+  select(-c(3:44), -c(67:69))
 ```
 
 ```{r}
 fertility_rate_stats <- fertility_rate |>
-  pivot_longer(c(3:34), 
+  pivot_longer(c(3:24), 
                names_to = "Year", 
                values_to = "Fertility Rate") |>
   filter(!is.na(`Fertility Rate`)) |>
@@ -205,31 +180,14 @@ fertility_rate_stats <- fertility_rate |>
 ```
 
 ```{r}
-gov_debt <- read_csv("data/gov_debt/central_gov_debt.csv", 
-          skip = 4) |>
-  select(-c(3:34), -c(67:69))
-```
-
-```{r}
-gov_debt_stats <- gov_debt |>
-  pivot_longer(c(3:34), 
-               names_to = "Year", 
-               values_to = "Government Debt") |>
-  filter(!is.na(`Government Debt`)) |>
-  group_by(`Country Name`) |>
-  summarise(`mean_gov_debt` = mean(`Government Debt`, na.rm = TRUE),
-            `sd_gov_debt` = sd(`Government Debt`, na.rm = TRUE))
-```
-
-```{r}
 internet <- read_csv("data/internet/internet.csv", 
           skip = 4) |>
-  select(-c(3:34), -c(67:69))
+  select(-c(3:44), -c(67:69))
 ```
 
 ```{r}
 internet_stats <- internet |>
-  pivot_longer(c(3:34), 
+  pivot_longer(c(3:24), 
                names_to = "Year", 
                values_to = "Internet") |>
   filter(!is.na(`Internet`)) |>
@@ -241,12 +199,12 @@ internet_stats <- internet |>
 ```{r}
 birth_life_exp <- read_csv("data/life_expectancy_birth/life_expectancy_birth.csv", 
           skip = 4) |>
-  select(-c(3:34), -c(67:69))
+  select(-c(3:44), -c(67:69))
 ```
 
 ```{r}
 birth_life_exp_stats <- birth_life_exp |>
-  pivot_longer(c(3:34), 
+  pivot_longer(c(3:24), 
                names_to = "Year", 
                values_to = "Life Expectancy at Birth") |>
   filter(!is.na(`Life Expectancy at Birth`)) |>
@@ -256,56 +214,15 @@ birth_life_exp_stats <- birth_life_exp |>
 ```
 
 ```{r}
-poverty <- read_csv("data/poverty_headcount/poverty_headcount_ratio.csv", 
-          skip = 4) |>
-  select(-c(3:34), -c(67:69))
-```
-
-```{r}
-poverty_stats <- poverty |>
-  filter(`Country Name` %in% countries) |>
-  pivot_longer(c(3:34), 
-               names_to = "Year", 
-               values_to = "Poverty") |>
-  filter(!is.na(`Poverty`)) |>
-  group_by(`Country Name`) |>
-  summarise(`mean_pov` = mean(`Poverty`, na.rm = TRUE),
-            `sd_pov` = sd(`Poverty`, na.rm = TRUE))
-```
-
-```{r}
-school_enrol <- read_csv("data/school_enrollment/school_enrollment.csv", 
-          skip = 4) |>
-  select(-c(3:34), -c(67:69))
-```
-
-```{r}
-school_enrol_stats <- school_enrol |>
-  filter(`Country Name` %in% countries) |>
-  pivot_longer(c(3:34), 
-               names_to = "Year", 
-               values_to = "School Enrollment") |>
-  filter(!is.na(`School Enrollment`)) |>
-  group_by(`Country Name`) |>
-  summarise(`mean_school_enr` = mean(`School Enrollment`, na.rm = TRUE),
-            `sd_school_enr` = sd(`School Enrollment`, na.rm = TRUE))
-```
-
-```{r}
 full_stats_df <- agriculture_land_stats |>
-  left_join(agriculture_employment_stats, by = "Country Name") |>
-  left_join(atms_stats, by = "Country Name") |>
   left_join(birth_life_exp_stats, by = "Country Name") |>
-  left_join(broad_money_stats, by = "Country Name") |>
   left_join(electricity_stats, by = "Country Name") |>
   left_join(fertility_rate_stats, by = "Country Name") |>
-  left_join(freshwater_withdrawals_stats, by = "Country Name") |>
-  left_join(gov_debt_stats, by = "Country Name") |>
   left_join(internet_stats, by = "Country Name") |>
-  left_join(poverty_stats, by = "Country Name") |>
-  left_join(precipitation_stats, by = "Country Name") |>
   left_join(sanitation_stats, by = "Country Name") |>
-  left_join(school_enrol_stats, by = "Country Name") 
+  left_join(population_growth_stats, by = "Country Name") |>
+  left_join(primary_school_enrol_stats, by = "Country Name") |>
+  left_join(total_unemployment_stats, by = "Country Name") 
 ```
 
 ```{r}
@@ -314,144 +231,142 @@ full_stats_df <-
   mutate(Underdeveloped = ifelse(`Country Name` %in% countries, 1, 0))
 ```
 
-
 ## Variable Description
 
-| Variable | Description                            |
-|----------|----------------------------------------|
-| Access to Electricity | The percentage of population with access to electricity |
-| Agricultural land | The share of land area that is arable, under permanent crops, and under permanent pastures |
-| Annual freshwater withdrawals | Total water withdrawals, not counting evaporation losses from storage basins  |
-| Automated teller machines (ATMs) | Automated teller machines per 100,000 adults |
-| Average precipitation in depth | the long-term average in depth (over space and time) of annual precipitation in mm per year |
-| Basic Sanitation Services | percentage of people using at least basic sanitation services, that is, improved sanitation facilities that are not shared with other households  |
-| Broad money | The sum of currency outside banks, as a fraction of the GDP  |
-| Employment in agriculture | The percentage of total employment engaged in agriculture  |
-| Fertility rate | The number of children that would be born to a woman if she were to live to the end of her childbearing years and bear children in accordance with age-specific fertility rates of the specified year  |
-| Central government debt | The entire stock of direct government fixed-term contractual obligations to others outstanding on a particular date  |
-| Individual Use of Internet | The percentage of population that uses the internet  |
-| Life expectancy at birth | The number of years a newborn infant would live if prevailing patterns of mortality at the time of its birth were to stay the same throughout its life  |
-| Poverty headcount ratio | The percentage of the population living below the national poverty line(s)   |
-| School enrollment, primary and secondary (gross) | The ratio of girls to boys enrolled at primary and secondary levels in public and private schools   |
+| Variable | Description
+|----------|----------------------------------------
+| agriculture_land | The share of land area that is arable, under permanent crops, and under permanent pastures |
+| birth_life_exp | The number of years a newborn infant would live if prevailing patterns of mortality at the time of its birth were to stay the same throughout its life |
+| electricity_access | The percentage of population with access to electricity |
+| fertility_rate | The number of children that would be born to a woman if she were to live to the end of her childbearing years and bear children in accordance with age-specific fertility rates of the specified year |
+| internet | The percentage of population that uses the internet |
+| population_growth | Annual population growth rate for year t is the exponential rate of growth of midyear population from year t-1 to t, expressed as a percentage |
+| primary_school_enrol | Gross enrollment ratio is the ratio of total enrollment, regardless of age, to the population of the age group that officially corresponds to the level of education shown |
+| sanitation | Percentage of people using at least basic sanitation services, that is, improved sanitation facilities that are not shared with other households |
+| total_unemployment | The share of the labor force that is without work but available for and seeking employment |
 
 ## Data Set Investigation
 
 ```{r}
 library(GGally)
-ggpairs(data = full_stats_df, columns = c(2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28))
+ggpairs(data = full_stats_df, columns = c(2, 4, 6, 8, 10, 12, 14, 16, 18))
 ```
 
 #### Logistic Regression Model Attempt
 
 ```{r}
-underdeveloped <- full_stats_df |>
-  filter(Underdeveloped == 1)
+# Get the means column for each variable
+# Preprocess the data
+full_means_df <- full_stats_df |>
+  select(contains("mean"))
+
+# Subset the data frame to only numeric columns
+numeric_columns <- sapply(full_means_df, is.numeric)
+
+# Scale the data
+scaled_data <- scale(full_means_df[, numeric_columns])
+
+# Add the "Underdeveloped" column back to the scaled data
+scaled_data_with_undev <- scaled_data |>
+  as.data.frame() |>
+  mutate(Underdeveloped = full_stats_df$Underdeveloped) |>
+  na.omit()
 ```
 
 ```{r}
-developed <- full_stats_df |>
-  filter(Underdeveloped != 1)
+median_agr_land = median(scaled_data_with_undev$mean_agr_land, na.rm = TRUE)
+median_life_exp = median(scaled_data_with_undev$mean_life_exp, na.rm = TRUE)
+median_elec_access = median(scaled_data_with_undev$mean_elec_access, na.rm = TRUE)
+median_fert_rate = median(scaled_data_with_undev$mean_fert_rate, na.rm = TRUE)
+median_sanit = median(scaled_data_with_undev$mean_sanit, na.rm = TRUE)
+median_population_growth = median(scaled_data_with_undev$mean_pop_growth, na.rm = TRUE)
+median_primary_school = median(scaled_data_with_undev$mean_prim_school, na.rm = TRUE)
+median_total_unempl = median(scaled_data_with_undev$mean_total_unempl, na.rm = TRUE)
+median_internet = median(scaled_data_with_undev$mean_inter, na.rm = TRUE)
+```
+
+```{r}
+library(modelr)
+## First Attempt
+# Fit the logistic regression model with all the variables
+model_glm <- glm(Underdeveloped ~ .,
+                  data = scaled_data_with_undev, family = "binomial")
+
+# Check the summary of the model
+summary(model_glm)
 ```
 
 ```{r}
 # Identify numeric columns
-numeric_cols <- sapply(full_stats_df, is.numeric)
+numeric_cols <- sapply(scaled_data_with_undev, is.numeric)
 
 # Compute range for each numeric column, removing NA values
-ranges <- sapply(full_stats_df[, numeric_cols], function(x) {
+ranges <- sapply(scaled_data_with_undev[, numeric_cols], function(x) {
   x <- na.omit(x)
   c(min(x), max(x))
 })
 ```
 
 ```{r}
-median_water_withd = median(full_stats_df$mean_water_withd, na.rm = TRUE)
-median_agr_land = median(full_stats_df$mean_agr_land, na.rm = TRUE)
-median_empl_agr = median(full_stats_df$mean_empl_agr, na.rm = TRUE)
-median_life_exp = median(full_stats_df$mean_life_exp, na.rm = TRUE)
-median_under_elec = median(full_stats_df$mean_under_elec, na.rm = TRUE)
-median_fert_rate = median(full_stats_df$mean_fert_rate, na.rm = TRUE)
-median_water_withd =  median(full_stats_df$mean_water_withd, na.rm = TRUE)
-median_gov_debt = median(full_stats_df$mean_gov_debt, na.rm = TRUE)
-median_precip = median(full_stats_df$mean_precip, na.rm = TRUE)
-median_sanit = median(full_stats_df$mean_sanit, na.rm = TRUE)
+underdeveloped <- scaled_data_with_undev |>
+  filter(Underdeveloped == 1)
 ```
 
 ```{r}
-library(modelr)
-## First Attempt
-# Fit the logistic regression model with selected variables
-model_glm <- glm(Underdeveloped ~ mean_agr_land + mean_life_exp + mean_under_elec + mean_fert_rate + mean_precip,
-                  data = full_stats_df, family = "binomial")
-
-# Check the summary of the model
-summary(model_glm)
-
-# Create the grid for prediction
-grid <- full_stats_df |>
-  data_grid(
-    mean_agr_land = seq_range(c(0.529988, 83.730378), n = 3),
-    mean_life_exp = seq_range(c(46.14012, 82.19024), n = 3),
-    mean_under_elec = median_under_elec,
-    mean_fert_rate = median_fert_rate,
-    mean_precip = seq_range(c(18.100, 3219.742), n = 3),
-    mean_water_withd = median_water_withd,
-    mean_sanit = median_sanit
-  )
-
-# Predict probabilities for the grid
-aug_model <- augment(model_glm, newdata = grid, se_fit = TRUE) |>
-  mutate(.predprob = plogis(.fitted))
-
-# Visualize the predictions
-ggplot(data = aug_model, aes(x = mean_life_exp, y = .predprob)) +
-  geom_line(aes(color = as.factor(round(mean_agr_land, 2)))) +
-  facet_wrap(~mean_precip)+
-  labs(x = "Mean Life Expectancy", y = "Predicted Probability", color = "Mean Agricultural Land")+
-  theme_minimal()
+developed <- scaled_data_with_undev |>
+  filter(Underdeveloped != 1) 
 ```
 
 ```{r}
 ## Second Attempt
-# Fit the logistic regression model with selected variables
-model_glm <- glm(Underdeveloped ~ mean_agr_land + mean_life_exp + mean_under_elec + mean_fert_rate + mean_precip,
-                  data = full_stats_df, family = "binomial")
+# Fit the logistic regression model with selected variables using their range and the median for the rest
+# Used the first model to come up with the most "significant" ones
+
+model_glm <- glm(Underdeveloped ~ .,
+                  data = scaled_data_with_undev, family = "binomial")
 
 # Create the grid for prediction
 grid <- full_stats_df |>
   data_grid(
-    mean_agr_land = seq_range(c(0.529988, 83.730378), n = 3),
-    mean_life_exp = median_life_exp,
-    mean_under_elec = seq_range(c(4.210244, 100), n = 3),
-    mean_fert_rate = median_fert_rate,
-    mean_precip = seq_range(c(18.100, 3219.742), n = 3),
-    mean_water_withd = median_water_withd,
-    mean_sanit = median_sanit
+    mean_agr_land = median_agr_land,
+    mean_life_exp = seq_range(c(-2.627905, 1.588857), n = 3),
+    mean_elec_access = seq_range(c(-2.6785616, 0.7295024), n = 3),
+    mean_fert_rate = seq_range(c(-1.274220, 3.082338), n = 3),
+    mean_sanit = median_sanit, 
+    mean_inter = median_internet,
+    mean_pop_growth = median_population_growth,
+    mean_prim_school = median_primary_school, 
+    mean_total_unempl = median_total_unempl
   )
 
-# Predict probabilities for the grid
+# Predict probabilities that a country is Underdeveloped
 aug_model <- augment(model_glm, newdata = grid, se_fit = TRUE) |>
   mutate(.predprob = plogis(.fitted))
 
 # Visualize the predictions
-ggplot(data = aug_model, aes(x = mean_agr_land, y = .predprob)) +
-  geom_line(aes(color = as.factor(round(mean_under_elec, 2)))) +
-  facet_wrap(~mean_precip) +
-  labs(x = "Mean Agricultural Land", y = "Predicted Probability", color = "Mean Precipitation Rate") +
+ggplot(data = aug_model, aes(x = mean_fert_rate, y = .predprob)) +
+  geom_line(aes(color = as.factor(round(mean_life_exp, 2)))) +
+  facet_wrap(~as.factor(mean_elec_access)) +
+  labs(x = "Standardized Mean Fertility Rate", y = "Predicted Probability", color = "Standardized Mean Electricity Access") +
   theme_minimal()
 ```
 
 ```{r}
-# Combination 2
+## Third Attempt
+# Fit the logistic regression model with selected variables using their range and the median for the rest
+# Used the first model to include the ones that were significant but not as much
+
 grid <- full_stats_df |>
   data_grid(
     mean_agr_land = median_agr_land,
-    mean_life_exp = seq_range(c(46.14012, 82.19024), n = 3),
-    mean_under_elec = median_under_elec,
-    mean_fert_rate = seq_range(c(1.104000, 7.502063), n = 3),
-    mean_precip = median_precip,
-    mean_water_withd = seq_range(c(0.02026736, 6495.832000), n = 3),
-    mean_sanit = median_sanit
+    mean_life_exp = seq_range(c(-2.627905, 1.588857), n = 3),
+    mean_elec_access = median_elec_access,
+    mean_fert_rate = seq_range(c(-1.274220, 3.082338), n = 3),
+    mean_sanit = median_sanit, 
+    mean_inter = median_internet,
+    mean_pop_growth =seq_range(c(-2.022998, 4.438928), n = 3),
+    mean_prim_school = median_primary_school, 
+    mean_total_unempl = median_total_unempl
   )
 
 # Predict probabilities for the grid
@@ -459,60 +374,44 @@ aug_model <- augment(model_glm, newdata = grid, se_fit = TRUE) |>
   mutate(.predprob = plogis(.fitted))
 
 # Visualize the predictions
-ggplot(data = aug_model, aes(x = mean_life_exp, y = .predprob)) +
-  geom_line(aes(color = as.factor(round(mean_water_withd, 2)))) +
-  facet_wrap(~mean_fert_rate) +
-  labs(x = "Mean Life Expectancy", y = "Predicted Probability", color = "Mean Fertility Rate") +
-  theme_minimal()
-
-# Combination 3
-grid <- full_stats_df |>
-  data_grid(
-    mean_agr_land = seq_range(c(0.529988, 83.730378), n = 3),
-    mean_life_exp = median_life_exp,
-    mean_under_elec = median_under_elec,
-    mean_fert_rate = median_fert_rate,
-    mean_precip = seq_range(c(18.100, 3219.742), n = 3),
-    mean_water_withd = median_water_withd,
-    mean_sanit = seq_range(c(6.029739, 100), n = 3)
-  )
-
-# Predict probabilities for the grid
-aug_model <- augment(model_glm, newdata = grid, se_fit = TRUE) |>
-  mutate(.predprob = plogis(.fitted))
-
-# Visualize the predictions
-ggplot(data = aug_model, aes(x = mean_agr_land, y = .predprob)) +
-  geom_line(aes(color = as.factor(round(mean_sanit, 2)))) +
-  facet_wrap(~mean_precip) +
-  labs(x = "Mean Agricultural Land", y = "Predicted Probability", color = "Mean Sanitation Rate") +
-  theme_minimal()
-
-# Combination 4
-grid <- full_stats_df |>
-  data_grid(
-    mean_agr_land = median_agr_land,
-    mean_life_exp = seq_range(c(46.14012, 82.19024), n = 3),
-    mean_under_elec = seq_range(c(4.210244, 100), n = 3),
-    mean_fert_rate = median_fert_rate,
-    mean_precip = seq_range(c(18.100, 3219.742), n = 3),
-    mean_water_withd = median_water_withd,
-    mean_sanit = median_sanit
-  )
-
-# Predict probabilities for the grid
-aug_model <- augment(model_glm, newdata = grid, se_fit = TRUE) |>
-  mutate(.predprob = plogis(.fitted))
-
-# Visualize the predictions
-ggplot(data = aug_model, aes(x = mean_life_exp, y = .predprob)) +
-  geom_line(aes(color = as.factor(round(mean_under_elec, 2)))) +
-  facet_wrap(~mean_precip) +
-  labs(x = "Mean Life Expectancy", y = "Predicted Probability", color = "Mean Electricity Access Rate") +
+ggplot(data = aug_model, aes(x = mean_fert_rate, y = .predprob)) +
+  geom_line(aes(color = as.factor(round(mean_life_exp, 2)))) +
+  facet_wrap(~mean_pop_growth) +
+  labs(x = "Standardized Mean Fertility Rate", y = "Predicted Probability", color = "Standardized Mean Life Expectancy") +
   theme_minimal()
 ```
 
-In general, what we have seen from the above plots is that attempting to fit a Logistic Regression Model give different combinations of proxies does not do a good job. Therefore, a more complex model might be able to interpret the relationships between the various variables that we have. 
+```{r}
+## Forth Attempt
+# Fit the logistic regression model with selected variables using their range and the median for the rest
+# Used the first model to include the ones that were significant but not as much
+
+grid <- full_stats_df |>
+  data_grid(
+    mean_agr_land = median_agr_land,
+    mean_life_exp = median_life_exp,
+    mean_elec_access = median_elec_access,
+    mean_fert_rate = seq_range(c(-1.308798, 2.850897), n = 3),
+    mean_sanit = median_sanit, 
+    mean_inter = seq_range(c(-1.511381, 2.405766), n = 3),
+    mean_pop_growth =seq_range(c(-2.221712, 3.779502), n = 3),
+    mean_prim_school = median_primary_school, 
+    mean_total_unempl = median_total_unempl
+  )
+
+# Predict probabilities for the grid
+aug_model <- augment(model_glm, newdata = grid, se_fit = TRUE) |>
+  mutate(.predprob = plogis(.fitted))
+
+# Visualize the predictions
+ggplot(data = aug_model, aes(x = mean_fert_rate, y = .predprob)) +
+  geom_line(aes(color = as.factor(round(mean_inter, 2)))) +
+  facet_wrap(~mean_pop_growth) +
+  labs(x = "Standardized Mean Fertility Rate", y = "Predicted Probability", color = "Standardized Mean Population Growth") +
+  theme_minimal()
+```
+
+In general, what we have seen from the above plots is that attempting to fit a Logistic Regression Model given different combinations of proxies does not do a good job. Therefore, a more complex model might be able to interpret the relationships between the various variables that we have. 
 
 ```{r}
 library(keras)
@@ -526,30 +425,58 @@ py_install("pandas")
 ```
 
 ```{r}
-# Preprocess the data
-full_means_df <- full_stats_df |>
-  select(contains("mean"))
-
-scaled_data <- scale(full_stats_df[, sapply(full_means_df, is.numeric)])
 set.seed(123)
 
 # Split the data into training and testing sets 80% and 20%, as we did in Machine Learning
-train_indices <- sample(1:nrow(scaled_data), 0.8 * nrow(scaled_data))
-test_indices <- setdiff(1:nrow(scaled_data), train_indices)
+train_indices <- sample(1:nrow(scaled_data_with_undev), 0.8 * nrow(scaled_data_with_undev))
+test_indices <- setdiff(1:nrow(scaled_data_with_undev), train_indices)
 
-train_data <- scaled_data[train_indices, ]
-test_data <- scaled_data[test_indices, ]
+train_data <- scaled_data_with_undev[train_indices, ]
+test_data <- scaled_data_with_undev[test_indices, ]
 ```
 
 ```{r}
 # Design the network
-network = keras.models.Sequential([
-    keras.Input(shape=(2,)),
-    keras.layers.Dense(4, activation="relu"),
-    keras.layers.Dense(5, activation="relu"),
-    keras.layers.Dense(4, activation="relu"),
-    keras.layers.Dense(1, activation = "sigmoid")
-])
+network <- keras_model_sequential() |>
+  layer_dense(units = 2, activation = "relu", input_shape = c(4)) |>
+  layer_dense(units = 4, activation="relu") |>
+  layer_dense(units = 5, activation="relu") |>
+  layer_dense(units = 4, activation="relu") |>
+  layer_dense(units = 1, activation = "sigmoid")
+```
+
+```{r}
+# Specify how the network will be trained
+network |> compile(
+  loss = "binary_crossentropy",
+  metrics = c("accuracy"),
+  optimizer = optimizer_adam(learning_rate = 0.01)
+  ## might add regularization
+)
+```
+
+```{r}
+# Train the network
+history <- network |> fit(
+  xtrain, ytrain,
+  epochs = 100,
+  validation_data = list(xval, yval),
+  verbose = 0
+)
+
+# Plot the learning curves
+curve <- data.frame(train = history$metrics$accuracy, val = history$metrics$val_accuracy)
+
+plot <- ggplot(data = curve, aes(x = seq_along(train))) +
+  geom_line(aes(y = train, color = "Train")) +
+  geom_line(aes(y = val, color = "Validation")) +
+  scale_color_manual(values = c("Train" = "blue", "Validation" = "red")) +
+  labs(x = "Epoch", y = "Accuracy") +
+  theme_minimal()
+
+# Evaluate the test data
+network |> evaluate(xtest, ytest)
+
 ```
 
 
