--- a/presentation/presentation.qmd
+++ b/presentation/presentation.qmd
@@ -1,7 +1,8 @@
 ---
-title: "Predicting Growth Potential for Under-Developed Countries in the World Using Neural Networks Presentation"
-format: revealjs
-
+title: "Predicting Growth Potential for Under-Developed Countries in the World Using Neural Networks"
+format: 
+  revealjs:
+    scrollable: true
 ---
 
 ```{r}
@@ -283,26 +284,27 @@ predictions <- predictions |>
   cbind(`Country Name` = scaled_data_with_undev_arranged$`Country Name`)
 ```
 
-## Data
+## Data {.smaller}
 
-* 
-| Variable | Description                            |
-|----------|----------------------------------------
-| agriculture_land | The share of land area that is arable, under permanent crops, and under permanent pastures |
-| birth_life_exp | The number of years a newborn infant would live if prevailing patterns of mortality at the time of its birth were to stay the same throughout its life |
-| electricity_access | The percentage of population with access to electricity |
-| fertility_rate | The number of children that would be born to a woman if she were to live to the end of her childbearing years and bear children in accordance with age-specific fertility rates of the specified year |
-| internet | The percentage of population that uses the internet |
-| population_growth | Annual population growth rate for year t is the exponential rate of growth of midyear population from year t-1 to t, expressed as a percentage |
-| primary_school_enrol | Gross enrollment ratio is the ratio of total enrollment, regardless of age, to the population of the age group that officially corresponds to the level of education shown |
-| sanitation | Percentage of people using at least basic sanitation services, that is, improved sanitation facilities that are not shared with other households |
-| total_unemployment | The share of the labor force that is without work but available for and seeking employment |
+-   
+
+    | Variable             | Description                                                                                                                                                                                           |
+    |-----------------|-------------------------------------------------------|
+    | agriculture_land     | The share of land area that is arable, under permanent crops, and under permanent pastures                                                                                                            |
+    | birth_life_exp       | The number of years a newborn infant would live if prevailing patterns of mortality at the time of its birth were to stay the same throughout its life                                                |
+    | electricity_access   | The percentage of population with access to electricity                                                                                                                                               |
+    | fertility_rate       | The number of children that would be born to a woman if she were to live to the end of her childbearing years and bear children in accordance with age-specific fertility rates of the specified year |
+    | internet             | The percentage of population that uses the internet                                                                                                                                                   |
+    | population_growth    | Annual population growth rate for year t is the exponential rate of growth of midyear population from year t-1 to t, expressed as a percentage                                                        |
+    | primary_school_enrol | Gross enrollment ratio is the ratio of total enrollment, regardless of age, to the population of the age group that officially corresponds to the level of education shown                            |
+    | sanitation           | Percentage of people using at least basic sanitation services, that is, improved sanitation facilities that are not shared with other households                                                      |
+    | total_unemployment   | The share of the labor force that is without work but available for and seeking employment                                                                                                            |
 
 ## Question of Interest
 
 Is there sufficient data available to the public regarding Underdeveloped Countries?
 
-## Visualization 1
+## Actual Map of the World and Distinction of Underdeveloped Countries
 
 ```{r}
 #| output: false
@@ -311,6 +313,8 @@ underdeveloped_map <- world_df |>
 ```
 
 ```{r}
+#| fig-width: 10
+#| fig-height: 10
 plot_1 <- ggplot()+
   geom_polygon(data = world_df, mapping = aes(x = long, y = lat, group = group, label = region), fill = "grey")+
   geom_polygon(data = underdeveloped_map, mapping = aes(x = long, y = lat, group = group, fill = Underdeveloped, label = region))+
@@ -324,7 +328,7 @@ plot_1 <- ggplot()+
 ggplotly(plot_1, tooltip = "label")
 ```
 
-## Visualization 2
+## Predicted Map of the World and Distinction of Underdeveloped Countries using Neural Networks
 
 ```{r}
 #| output: false
@@ -337,6 +341,9 @@ predicted_full_df <- left_join(predictions, world_df, by = c("Country Name" = "r
 ```
 
 ```{r}
+#| fig-width: 10
+#| fig-height: 10
+
 plot_2 <- ggplot()+
   geom_polygon(data = world_df, mapping = aes(x = long, y = lat, group = group, label = region), fill = "grey")+
     geom_polygon(data = predicted_full_df, mapping = aes(x = long, y = lat, group = group, fill = as.factor(Underdeveloped), 
@@ -350,7 +357,7 @@ plot_2 <- ggplot()+
 ggplotly(plot_2, tooltip = "label")
 ```
 
-## Visualization 3
+## Confusion Matrix
 
 ```{r}
 #| output: false
@@ -386,7 +393,3 @@ combined_summary <- rbind(summary_actual_df, summary_predicted_df)
 # Print combined summary using pander
 pander(combined_summary, caption = "Summary of Actual and Predicted Classes")
 ```
-
-
-
-
